# fastapi-auth-mvp

./: .env  Dockerfile  Makefile  README.md  docker-compose.yaml  nginx.conf  prometheus.yaml  prometheus.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: codeql.yaml  dependency-review.yaml  python-app.yml  upload-test.yaml
backend/app/: app.py  auth.py  config.py  constants.py  data.py  database.py  dependencies.py  exceptions.py  logging.py  main.py  models.py  routes.py
backend/app/base/: auth.py  config.py  exceptions.py  logging.py
backend/app/core/: app.py  auth.py  config.py  exceptions.py  logging.py
backend/app/data/: auth.py
backend/app/database/: base.py  core.py  initial_data.py  instance.py
backend/app/database/data/: auth.py
backend/app/database/models/: __init__.py  auth.py  base.py  logging.py  request.py  throttling.py  users.py
backend/app/dependencies/: auth.py  email.py  users.py  users_repository.py  users_service.py
backend/app/listeners/: logging.py
backend/app/middlewares/: __init__.py  bundler.py  logging.py  request.py  throttling.py  validation.py
backend/app/models/: auth.py  email.py  throttling.py  users.py
backend/app/repositories/: auth.py  logging.py  request.py  users.py
backend/app/routes/: __init__.py  auth.py  bundler.py  data.py  email.py  health.py  misc.py  public.py  roles_bundler.py  system.py  users.py
backend/app/scheduler/: __init__.py  bundler.py  request_logging.py  testing.py
backend/app/services/: auth.py  email.py  users.py
backend/app/utils/: database.py  dependencies.py  healthcheck.py  logging.py  misc.py  models.py  repositories.py  request.py  security.py  throttling.py  users.py
backend/static/css/: cat_style.css
backend/templates/: cat_page.html
backend/tests/: Collection fastapi-auth.postman_collection.json  conftest.py  test_auth.py  test_database_models_auth.py  test_database_models_users.py  test_middlewares_throttling.py  test_models_users.py  test_repositories_auth.py  test_repositories_users.py  test_routes_auth.py  test_routes_public.py  test_utils_logging.py  test_utils_misc.py  test_utils_models.py  test_utils_request.py  test_utils_security.py
lab/: main.ipynb
scripts/: watch-tests.sh
static/pages/css/: cat_style.css
static/pages/html/: cat_page.html
