[tool.poetry]
name = "fastapi-auth-mvp"
version = "0.0.1"
description = "A minimal value product for authentication with FastAPI"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
aioredis = "2.0.1"
asyncpg = "0.29.0"
apscheduler = "3.10.4"
fastapi-csrf-protect = "^0.3.4"
fastapi-mail = "^1.4.1"
fastapi = "^0.111.0"
Jinja2 = "3.1.4"
gunicorn = "21.2.0"
pydantic = "^2.7.4"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-json-logger = "2.0.7"
psycopg2-binary = "^2.9.9"
psutil = "^6.0.0"
pydantic-settings = "2.3.4"
respx = "0.21.1"
SQLAlchemy = "^2.0.30"
SQLAlchemy-Utils = "^0.41.2"
toml = "0.10.2"
faker = "^26.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-watch = "^4.2.0"
pytest-cov = "^5.0.0"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
